# name_to_smiles

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.IN  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
cholla_chem/: main.py
cholla_chem/name_manipulation/name_correction/: scoring.py
core/: main.py  smiles_selector.py  todo.txt
core/datafiles/name_dicts/: manual_name_dict.json
core/datafiles/name_dicts/custom_name_dicts/: example_custom_dict.json
core/name_manipulation/: name_correction.py  split_names.py
core/resolvers/: cirpy_resolver.py  manual_resolver.py  opsin_resolver.py  peptide_resolver.py  pubchem_resolver.py  split_name_resolver.py  structural_formula_resolver.py
core/utils/: chem_utils.py  constants.py  logging_config.py  string_utils.py
docs/: getting_started.md  index.md  installation.md  name_manipulation.md  resolvers.md  smiles_selection.md
getting_started/: index.html
installation/: index.html
name_manipulation/: index.html
placeholder_name/: __init__.py  main.py  smiles_selector.py
placeholder_name/name_manipulation/: manipulate_names.py  name_correction.py  split_names.py
placeholder_name/name_manipulation/name_correction/: correction_strategies.py  dataclasses.py  name_corrector.py  regexes.py  scoring.py  validators.py
placeholder_name/resolvers/: chemspipy_resolver.py  cirpy_resolver.py  manual_resolver.py  opsin_resolver.py  peptide_resolver.py  pubchem_resolver.py  structural_formula_resolver.py
placeholder_name/resolvers/inorganic_resolver/: inorganic_resolver.py  inorganic_resolver_tokens.py
placeholder_name/utils/: chem_utils.py  constants.py  logging_config.py  string_utils.py
reference/: index.html
resolvers/: index.html
search/: search_index.json
smiles_selection/: index.html
tests/: test_chemspipy_resolver.py  test_cirpy_resolver.py  test_main.py  test_manual_resolver.py  test_opsin_resolver.py  test_pubchem_resolver.py  test_smiles_selector.py  test_split_name_name_manipulation.py  test_split_name_resolver.py
