[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "placeholder_name"
version = "0.0.1"
authors = [
    {name = "De Novo Chem Team", email = "carson.britt@denovochem.com"}
]
description = "Name-to-SMILES conversion"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/denovochem/name_to_smiles"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
# This is equivalent to find_packages()

[tool.setuptools.package-data]
placeholder_name = [
    "datafiles/name_dicts/*.json",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
ignore_missing_imports = true